--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,3 +15,4 @@ jobs:
         with:
           GH_PAT: ${{ secrets.PAT }}
           COMMIT_BODY: This is created due to changes in the flagright SDK, syncing changes
+          SKIP_PR: true
