--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
           # Get the latest release version
           RELEASE_VERSION=$(gh release view  --json tagName --jq '.tagName')
           echo "::set-output name=version::${RELEASE_VERSION}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
 
       - name: Increment Version
         id: increment_version
@@ -32,7 +34,8 @@ jobs:
           PATCH=$((PATCH + 1))
           NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
           echo "::set-output name=version::${NEW_VERSION}"
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
       - name: Create Release
         run: |
           # Create the release using the incremented version
