--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Create Release
         run: |
           # Create the release using the incremented version
-          gh release create v${{ steps.increment_version.outputs.version }} -t "Release v${{ steps.increment_version.outputs.version }}" -n "Release notes for v${{ steps.increment_version.outputs.version }}" -F path/to/changelog.md
+          gh release create v${{ steps.increment_version.outputs.version }} -t "Release v${{ steps.increment_version.outputs.version }}" -n
         env:
           GH_TOKEN: ${{ secrets.PAT }}
