--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,7 @@ on:
   push:
     paths:
       - "tester.txt"
-    tags:
-      - []
+    tags: []
 jobs:
   increment-and-release:
     runs-on: ubuntu-latest
