--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Create Release
         run: |
           echo "${{github.event.head_commit.message}}"
-          IFF='\n' read -ra message <<< "${{github.event.head_commit.message}}"
+          read -ra message <<< "${{github.event.head_commit.message}}"
           echo "${message[0]}"
-          echo "${message[1]}"
+          echo "${message[@]:1}"
           # gh release create ${{ steps.increment_version.outputs.version }} -t "${{ steps.increment_version.outputs.version }}"
         env:
           GH_TOKEN: ${{ secrets.PAT }}
