--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           echo "::set-output name=version::${NEW_VERSION}"
       - name: Create Release
         run: |
-          echo "${{github.event.head_commit.message}}"
+          IFS="" echo "${{github.event.head_commit.message}}"
           read -ra message <<< "${{github.event.head_commit.message}}"
           echo "${message[0]}"
           echo "${message[@]:1}"
