--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,14 +27,11 @@ jobs:
           MINOR="${PARTS[1]}"
           PATCH="${PARTS[2]}"
           PATCH=$((PATCH + 1))
-          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH+1}"
+          COMMIT_BODY=$(echo "${{github.event.head_commit.message}}" | tail -n +2)
+          NEW_VERSION="${MAJOR}.${MINOR+1}.${{COMMIT_BODY=='patch'&& PATCH+1}}"
           echo "::set-output name=version::${NEW_VERSION}"
       - name: Create Release
         run: |
-          commit_title=$(echo "${{github.event.head_commit.message}}" | head -n 1)
-          commit_body=$(echo "${{github.event.head_commit.message}}" | tail -n +2)
-          echo "${commit_title}"
-          echo "${commit_body}" 
-          # gh release create ${{ steps.increment_version.outputs.version }} -t "${{ steps.increment_version.outputs.version }}"
+          gh release create ${{ steps.increment_version.outputs.version }} -t "${{ steps.increment_version.outputs.version }}"
         env:
           GH_TOKEN: ${{ secrets.PAT }}
