--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           PATCH="${PARTS[2]}"
           PATCH=$((PATCH + 1))
           COMMIT_BODY=$(echo "${{github.event.head_commit.message}}" | tail -n +2)
-          NEW_VERSION="${MAJOR}.${MINOR+1}.${{${COMMIT_BODY}=='patch'&& PATCH+1}}"
+          NEW_VERSION="${MAJOR}.${MINOR+1}.${{${COMMIT_BODY}=='patch'&& ${PATCH+1}}}"
           echo "::set-output name=version::${NEW_VERSION}"
       - name: Create Release
         run: |
