--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,10 @@ jobs:
           MAJOR="${PARTS[0]}"
           MINOR="${PARTS[1]}"
           PATCH="${PARTS[2]}"
-          PATCH=$((PATCH + 1))
           COMMIT_BODY=$(echo "${{github.event.head_commit.message}}" | tail -n +2)
-          NEW_VERSION="${MAJOR}.$((${COMMIT_BODY}=='patch'&& ${MINOR}.$((PATCH+1)) || $((MINOR+1)).0))"
+          PATCH=$((COMMIT_BODY=='patch' && ((PATCH + 1)) || 0))
+          MINOR=$((COMMIT_BODY=='patch' && MINOR || ((MINOR+1))))
+          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
           echo "::set-output name=version::${NEW_VERSION}"
       - name: Create Release
         run: |
