--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
           PATCH="${PARTS[2]}"
           COMMIT_BODY=$(echo "${{github.event.head_commit.message}}" | tail -n +2)
           echo "${COMMIT_BODY}"
-          PATCH=$((COMMIT_BODY=="patch" && PATCH + 1 || 0))
-          MINOR=$((COMMIT_BODY=="patch" && MINOR || MINOR+1))
+          PATCH=$((COMMIT_BODY=="patch" && "$((PATCH + 1))" || "0"))
+          MINOR=$((COMMIT_BODY=="patch" && "${MINOR}" || "$((MINOR+1))"))
           NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
           echo "::set-output name=version::${NEW_VERSION}"
       - name: Create Release
