--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,9 @@ jobs:
           MINOR="${PARTS[1]}"
           PATCH="${PARTS[2]}"
           COMMIT_BODY=$(echo "${{github.event.head_commit.message}}" | tail -n +2)
+          echo "commit body should be below"
           echo "${COMMIT_BODY}"
-          if [ "$COMMIT_BODY" = "patch" ]; then
+          if [ "$COMMIT_BODY" == "patch" ]; then
           PATCH=$((PATCH + 1))
           else
           PATCH=0
